# GreenBlood

./: .gitignore  GreenBlood.sln  README.md  docker-compose.yml  index.html
.github/workflows/: deploy.yml  rust.yml
Domain/: Measurement.cs  Patient.cs  PatientBe.cs
GreenBlood/: Cargo.toml
GreenBlood/src/: main.rs
Measurments_Service/: Dockerfile  Dockerfile1.original  Measurments_Service.csproj  Measurments_Service.http  Program.cs  appsettings.json
Measurments_Service/Be/: MeasurmentBe.cs
Measurments_Service/Migrations/: 20240423112046_InitialCreate.Designer.cs  20240423112046_InitialCreate.cs  20240424124158_initialpostgres.Designer.cs  20240424124158_initialpostgres.cs  20240427104417_measurements.Designer.cs  20240427104417_measurements.cs  MeasurmentContextModelSnapshot.cs
Measurments_Service/Properties/: launchSettings.json
Measurments_Service/Repository/: IMeasurmentRepo.cs  MeasurmentContext.cs  MeasurmentRepo.cs
Measurments_Service/Service/: IMeasurmentService.cs  MeasurmentService.cs
Patient-Repo/: DBContext.cs  IPatientRepository.cs  Patient-Repo.csproj  PatientRepository.cs
Patient-Repo/Migrations/: 20240424131729_initialpostgres.Designer.cs  20240424131729_initialpostgres.cs  20240425115048_initialCreate.Designer.cs  20240425115048_initialCreate.cs  20240427104550_patients.Designer.cs  (+2 more)
PatientService/: IPatientService.cs  PatientService.cs  PatientService.csproj
Tests/: PatientServiceTests.cs  Tests.csproj
docs/: index.html
measurement-service/: Cargo.toml
measurement-service/src/: main.rs
patient-service/: Cargo.toml
(+90 files in other folders)
