[package]
name = "measurement-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
opentelemetry = "0.22.0"
tokio = { version = "1.37.0", features = ["full"] }
mini-redis = "0.4"
chrono = { version = "0.4.1", features = ["serde"]}
utoipa = "4.2.0"
utoipa-swagger-ui = {"6.0.0". features = ["axum"]}
serde = "1.0"
